--- a/ui/storefront/Views/Home/Index.cshtml
+++ b/ui/storefront/Views/Home/Index.cshtml
@@ -2,209 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="relative overflow-hidden bg-white mb-6">
-    <div class="pb-80 pt-16 sm:pb-40 sm:pt-24 lg:pb-48 lg:pt-40">
-        <div class="relative mx-auto max-w-7xl px-4 sm:static sm:px-6 lg:px-8">
-            <div class="sm:max-w-lg">
-                <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Welcome to Rookie Shop</h1>
-                <p class="mt-4 text-xl text-gray-500">Our products are designed to help you get the most out of your daily life. Take a look at our collection and find the perfect fit for you.</p>
-            </div>
-            <div>
-                <div class="mt-10">
-                    <div aria-hidden="true" class="pointer-events-none lg:absolute lg:inset-y-0 lg:mx-auto lg:w-full lg:max-w-7xl">
-                        <div class="absolute transform sm:left-1/2 sm:top-0 sm:translate-x-8 lg:left-1/2 lg:top-1/2 lg:-translate-y-1/2 lg:translate-x-8">
-                            <div class="flex items-center space-x-6 lg:space-x-8">
-                                <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
-                                    <div class="h-64 w-44 overflow-hidden rounded-lg sm:opacity-0 lg:opacity-100">
-                                        <img loading="lazy" src="/imgs/home/home-page-01.jpg" alt="Home Product 1" class="h-full w-full object-cover object-center">
-                                    </div>
-                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-02.jpg" alt="Home Product 2" class="h-full w-full object-cover object-center">
-                                    </div>
-                                </div>
-                                <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
-                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-03.jpg" alt="Home Product 3" class="h-full w-full object-cover object-center">
-                                    </div>
-                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-04.jpg" alt="Home Product 4" class="h-full w-full object-cover object-center">
-                                    </div>
-                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-05.jpg" alt="Home Product 5" class="h-full w-full object-cover object-center">
-                                    </div>
-                                </div>
-                                <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
-                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-06.jpg" alt="Home Product 6" class="h-full w-full object-cover object-center">
-                                    </div>
-                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-07.jpg" alt="Home Product 7" class="h-full w-full object-cover object-center">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="#" class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700">Shop Now</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<partial name="Components/Home/Hero"/>
 <hr/>
-<div class="bg-white py-24 sm:py-32">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                <dt class="text-base leading-7 text-gray-600">Transactions every 24 hours</dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">44 million</dd>
-            </div>
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                <dt class="text-base leading-7 text-gray-600">Customer savings</dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">$119 trillion</dd>
-            </div>
-            <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                <dt class="text-base leading-7 text-gray-600">Weekly visitors</dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">46,000</dd>
-            </div>
-        </dl>
-    </div>
-</div>
+<partial name="Components/Home/Stats"/>
 <hr/>
-<div class="bg-white py-24 sm:py-32">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <div class="mx-auto max-w-2xl lg:text-center">
-            <h2 class="text-base font-semibold leading-7 text-indigo-600">Benefits of shopping with us</h2>
-            <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Why choose Rookie Shop?</p>
-            <p class="mt-6 text-lg leading-8 text-gray-600">
-                Rookie Shop offers a wide range of products that can help you get the most out of your daily life. Our products are designed to be easy to use and to fit any lifestyle. Take a look at our collection and find the perfect fit for you.
-            </p>
-        </div>
-        <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-4xl">
-            <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-10 lg:max-w-none lg:grid-cols-2 lg:gap-y-16">
-                <div class="relative pl-16">
-                    <dt class="text-base font-semibold leading-7 text-gray-900">
-                        <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
-                            <svg width="800px" height="800px" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M6 15L19.3714 25.5377C20.5 26.5 22.8282 28 25 26C27.2893 23.8918 25.5 21.5 25 21L17 15"
-                                      stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M4 8H27L38 18" stroke="#ffffff" stroke-width="4" stroke-linecap="round"
-                                      stroke-linejoin="round"/>
-                                <path d="M9 33L44 33.0193" stroke="#ffffff" stroke-width="4" stroke-linecap="round"
-                                      stroke-linejoin="round"/>
-                                <path d="M9 18V40H44V18H22.0002" stroke="#ffffff" stroke-width="4" stroke-linecap="round"
-                                      stroke-linejoin="round"/>
-                            </svg>
-                        </div>
-                        Secure payments
-                    </dt>
-                    <dd class="mt-2 text-base leading-7 text-gray-600">
-                        With cash and Stripe, you can be sure that your payments are secure. We use the latest encryption technology to protect your data.
-                    </dd>
-                </div>
-                <div class="relative pl-16">
-                    <dt class="text-base font-semibold leading-7 text-gray-900">
-                        <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
-                            <svg width="800px" height="800px" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M24 16H29V4L44 19L29 34V24H18V13L4 28L18 44V32H23" stroke="#ffffff" stroke-width="4"
-                                      stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                        </div>
-                        Shipping & returns
-                    </dt>
-                    <dd class="mt-2 text-base leading-7 text-gray-600">
-                        We offer free shipping on all orders. If you're not satisfied with your purchase, you can return it within 30 days for a full refund.
-                    </dd>
-                </div>
-                <div class="relative pl-16">
-                    <dt class="text-base font-semibold leading-7 text-gray-900">
-                        <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
-                            <svg width="800px" height="800px" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg"
-                                 aria-labelledby="supportIconTitle" stroke="#ffffff" stroke-width="2" stroke-linecap="round"
-                                 stroke-linejoin="round" fill="none" color="#ffffff">
-                                <title id="supportIconTitle">Support</title>
-                                <path
-                                    d="M18,9 L16,9 C14.8954305,9 14,9.8954305 14,11 L14,13 C14,14.1045695 14.8954305,15 16,15 L16,15 C17.1045695,15 18,14.1045695 18,13 L18,9 C18,4.02943725 13.9705627,0 9,0 C4.02943725,0 0,4.02943725 0,9 L0,13 C1.3527075e-16,14.1045695 0.8954305,15 2,15 L2,15 C3.1045695,15 4,14.1045695 4,13 L4,11 C4,9.8954305 3.1045695,9 2,9 L0,9"
-                                    transform="translate(3 3)"/>
-                                <path d="M21,14 L21,18 C21,20 20.3333333,21 19,21 C17.6666667,21 16,21 14,21"/>
-                            </svg>
-                        </div>
-                        Friendly support
-                    </dt>
-                    <dd class="mt-2 text-base leading-7 text-gray-600">
-                        Contact us if you have any questions or need help with your order. We're here to help you 24/7.
-                    </dd>
-                </div>
-                <div class="relative pl-16">
-                    <dt class="text-base font-semibold leading-7 text-gray-900">
-                        <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-600">
-                            <svg width="800px" height="800px" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M16 6H8C6.89543 6 6 6.89543 6 8V16" stroke="#ffffff" stroke-width="4"
-                                      stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M16 42H8C6.89543 42 6 41.1046 6 40V32" stroke="#ffffff" stroke-width="4"
-                                      stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M32 42H40C41.1046 42 42 41.1046 42 40V32" stroke="#ffffff" stroke-width="4"
-                                      stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M32 6H40C41.1046 6 42 6.89543 42 8V16" stroke="#ffffff" stroke-width="4"
-                                      stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M24 16V32" stroke="#ffffff" stroke-width="4" stroke-linecap="round"
-                                      stroke-linejoin="round"/>
-                                <path d="M32 16V32" stroke="#ffffff" stroke-width="4" stroke-linecap="round"
-                                      stroke-linejoin="round"/>
-                                <path d="M16 16V32" stroke="#ffffff" stroke-width="4" stroke-linecap="round"
-                                      stroke-linejoin="round"/>
-                            </svg>
-                        </div>
-                        Quality products
-                    </dt>
-                    <dd class="mt-2 text-base leading-7 text-gray-600">
-                        Our products are made with high-quality materials. We stand behind the quality of our products.
-                    </dd>
-                </div>
-            </dl>
-        </div>
-    </div>
-</div>
-<div class="relative isolate overflow-hidden bg-gray-900 py-16 sm:py-24 lg:py-32">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-2">
-            <div class="max-w-xl lg:max-w-lg">
-                <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Subscribe to our newsletter.</h2>
-                <p class="mt-4 text-lg leading-8 text-gray-300">
-                    Keep up to date with the latest news and offers from Rookie Shop. Subscribe to our newsletter and never miss a thing.
-                </p>
-                <div class="mt-6 flex max-w-md gap-x-4">
-                    <label for="email-address" class="sr-only">Email address</label>
-                    <input id="email-address" name="email" type="email" autocomplete="email" required class="min-w-0 flex-auto rounded-md border-0 bg-white/5 px-3.5 py-2 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6" placeholder="Enter your email">
-                    <button type="submit" class="flex-none rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500">Subscribe</button>
-                </div>
-            </div>
-            <dl class="grid grid-cols-1 gap-x-8 gap-y-10 sm:grid-cols-2 lg:pt-2">
-                <div class="flex flex-col items-start">
-                    <div class="rounded-md bg-white/5 p-2 ring-1 ring-white/10">
-                        <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5m-9-6h.008v.008H12v-.008zM12 15h.008v.008H12V15zm0 2.25h.008v.008H12v-.008zM9.75 15h.008v.008H9.75V15zm0 2.25h.008v.008H9.75v-.008zM7.5 15h.008v.008H7.5V15zm0 2.25h.008v.008H7.5v-.008zm6.75-4.5h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V15zm0 2.25h.008v.008h-.008v-.008zm2.25-4.5h.008v.008H16.5v-.008zm0 2.25h.008v.008H16.5V15z"/>
-                        </svg>
-                    </div>
-                    <dt class="mt-4 font-semibold text-white">Promotions</dt>
-                    <dd class="mt-2 leading-7 text-gray-400">
-                        We offer exclusive promotions to our members to help you save money.
-                    </dd>
-                </div>
-                <div class="flex flex-col items-start">
-                    <div class="rounded-md bg-white/5 p-2 ring-1 ring-white/10">
-                        <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M10.05 4.575a1.575 1.575 0 10-3.15 0v3m3.15-3v-1.5a1.575 1.575 0 013.15 0v1.5m-3.15 0l.075 5.925m3.075.75V4.575m0 0a1.575 1.575 0 013.15 0V15M6.9 7.575a1.575 1.575 0 10-3.15 0v8.175a6.75 6.75 0 006.75 6.75h2.018a5.25 5.25 0 003.712-1.538l1.732-1.732a5.25 5.25 0 001.538-3.712l.003-2.024a.668.668 0 01.198-.471 1.575 1.575 0 10-2.228-2.228 3.818 3.818 0 00-1.12 2.687M6.9 7.575V12m6.27 4.318A4.49 4.49 0 0116.35 15m.002 0h-.002"/>
-                        </svg>
-                    </div>
-                    <dt class="mt-4 font-semibold text-white">No spam</dt>
-                    <dd class="mt-2 leading-7 text-gray-400">
-                        We respect your privacy and will never share your information with third party.
-                    </dd>
-                </div>
-            </dl>
-        </div>
-    </div>
-    <div class="absolute left-1/2 top-0 -z-10 -translate-x-1/2 blur-3xl xl:-top-6" aria-hidden="true">
-        <div class="aspect-[1155/678] w-[72.1875rem] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-    </div>
-</div>
+<partial name="Components/Home/Benefit"/>
+<partial name="Components/Home/NewsLetter"/>
