--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
 <header class="shadow-sm">
     <nav class="bg-white fixed w-full z-20 top-0 start-0 border-b border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a asp-controller="Home" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img loading="lazy" src="/imgs/logo.png" class="h-8" alt="Rookie Shop">
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img loading="lazy" src="~/imgs/logo.png" class="h-8" alt="Rookie Shop">
                 <span class="self-center text-2xl font-semibold whitespace-nowrap">Rookie Shop</span>
             </a>
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -34,13 +34,13 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-controller="Account" asp-action="Logout" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Log Out</a>
+                            <a asp-area="User" asp-controller="Account" asp-action="Logout" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Log Out</a>
                         </li>
                     </ul>
                 }
                 else
                 {
-                    <a asp-controller="Account" asp-action="Login" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Sign in</a>
+                    <a asp-area="User" asp-controller="Account" asp-action="Login" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Sign in</a>
                 }
                 <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-sticky" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
@@ -52,13 +52,13 @@
             <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
                 <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white">
                     <li>
-                        <a asp-controller="Home" asp-action="Index" class="block py-2 px-3 bg-blue-700 rounded md:bg-transparent md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("Home") ? "text-blue-700" : "text-gray-900")" aria-current="page">Home</a>
+                        <a asp-area="" asp-controller="Home" asp-action="Index" class="block py-2 px-3 bg-blue-700 rounded md:bg-transparent md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("Home") ? "text-blue-700" : "text-gray-900")" aria-current="page">Home</a>
                     </li>
                     <li>
-                        <a asp-controller="Product" asp-action="Index" class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("Product") ? "text-blue-700" : "text-gray-900")">Products</a>
+                        <a asp-area="Product" asp-controller="Product" asp-action="Index" class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("Product") ? "text-blue-700" : "text-gray-900")">Products</a>
                     </li>
                     <li>
-                        <a asp-controller="About" asp-action="Index" class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("About") ? "text-blue-700" : "text-gray-900")">About</a>
+                        <a asp-area="" asp-controller="About" asp-action="Index" class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("About") ? "text-blue-700" : "text-gray-900")">About</a>
                     </li>
                 </ul>
             </div>
@@ -90,7 +90,7 @@
 
 <script src="~/lib/dist/jquery/dist/jquery.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
-@await RenderSectionAsync("Scripts", required: false)
+@await RenderSectionAsync("Scripts", false)
 
 </body>
 </html>
